normalize and clean up aliases and duplicate type utilities